templater/tests/snapshots/error__debug_render_report__arg_count_one.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected 2 arguments, got 1
   ,----
 1 | {{ two_arg(1) }}
   :             |
   :             `-- add 1 argument
   `----
