templater/tests/snapshots/error__debug_render_report__arg_count_two.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected 1 argument, got 2
   ,----
 1 | {{ one_arg(1, 2) }}
   :             ^|^
   :              `-- remove 1 argument
   `----
