templater/tests/snapshots/error__debug_render_report__arg_count_zero.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected 1 argument, got 0
   ,----
 1 | {{ one_arg() }}
   :           ^|
   :            `-- add 1 argument
   `----
