templater/tests/snapshots/error__debug_render_report__custom_function_error.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x arguments must not match
   ,----
 1 | {{ custom(1, 2) }}
   :           |  |
   :           |  `-- fix this argument
   :           `-- fix this argument
   `----
