templater/tests/snapshots/error__debug_render_report__dot_access_on_non_map.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected map, got string
   ,----
 1 | {{ str.field }}
   :    ^|^
   :     `-- provide a value of type map
   `----
