templater/tests/snapshots/error__debug_render_report__else_with_operand.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unexpected token
   ,----
 1 | {% if true %}{% else x %}{% end %}
   :                      ^
   `----
