templater/tests/snapshots/error__debug_render_report__empty_interp_after_text.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty interpolation
   ,----
 1 | hello {{  }}
   :       ^^^^^^
   `----
