templater/tests/snapshots/error__debug_render_report__empty_interpolation.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty interpolation
   ,----
 1 | {{ }}
   : ^^^^^
   `----
