templater/tests/snapshots/error__debug_render_report__empty_statement.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty statement
   ,----
 1 | {% %}
   : ^^^^^
   `----
