templater/tests/snapshots/error__debug_render_report__escaped_modifier_close_unclosed.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed delimiter
   ,----
 1 | {{ x \-}}
   : ^^
   `----
