templater/tests/snapshots/error__debug_render_report__for_iterable_type_mismatch_str.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x expected type list, got string
   ,----
 1 | {% for x in str %}x{% end %}
   :             ^^^
   `----
